# remediai

./: .copilot-instructions.md  .dockerignore  .env.example  .gitignore  AGENTS.md  AGENT_DESIGN.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SECURITY_GUARDRAILS.md  SPEC.md  TECH_STACK.md  docker-compose.local.yml  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: dependency-security-greenkeeper.agent.md  pipeline-reliability-engineer.agent.md
.github/instructions/: prompt-engineering.instructions.md  security.instructions.md  testing.instructions.md
.github/workflows/: azure-infra-deployment.yml  ci.yml  docs-site-publish.yml  docs.yml  quality-gate.yml  release.yml
alembic/versions/: 0004_monitoring_result.py  0005_exception_language.py  0006_remove_work_items_add_pr_fields.py
apps/api/: main.py
apps/dashboard/: index.html  package-lock.json  package.json
apps/docs/: Dockerfile  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
apps/log_bridge/: Dockerfile  exception_parser.py  log_tailer.py  main.py  requirements.txt
apps/worker/: main.py
docs/: configuration-management.md  enterprise-agent-platform-structure.md
docs/prompts/: root_cause_v2.md  root_cause_v3.md  root_cause_v4.md  triage_v2.md  triage_v3.md  triage_v4.md
docs/references/: enterprise-agent-platform-structure.md
docs/runbooks/: gateway-retry.md  github-branch-protection.md  github-pages-setup.md
docs/specs/: phase-01-project-structure.md  phase-02-domain-models.md  phase-03-database.md  (+21 more)
scripts/: populate_search_index.py  setup_github_pages.sh  sync_docs_site.py
(+144 files in other folders)
