[tool.poetry]
name = "remediai"
version = "0.1.0"
description = "AI-powered exception analysis and remediation platform"
authors = ["Anji Keesari <anjkeesari@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "apps" },
    { include = "packages" },
]

[tool.poetry.dependencies]
python = "^3.12"

# API
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.30" }
pydantic = "^2.7"
pydantic-settings = "^2.3"

# Agent orchestration
langgraph = "^0.2"
langchain-openai = "^0.2"
langchain-community = "^0.3"

# Azure
azure-identity = "^1.17"
azure-monitor-query = "^1.3"
azure-servicebus = "^7.12"
azure-search-documents = "^11.6"
azure-storage-blob = "^12.20"
azure-keyvault-secrets = "^4.8"

# Database
sqlalchemy = "^2.0"
alembic = "^1.13"
asyncpg = "^0.29"

# Cache
redis = { extras = ["asyncio"], version = "^5.0" }

# Observability
opentelemetry-sdk = ">=1.20.0"
opentelemetry-instrumentation-fastapi = { version = ">=0.44b0", allow-prereleases = true }
structlog = "^24.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
httpx = "^0.27"
ruff = "^0.4"
mypy = "^1.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.12"
ignore_missing_imports = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]
